@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* 修复了一个oncoplot的bug
+* kaplan\_meier增加了cox\_table\_loc参数用来设置左上角表格的位置
 * analysis.cox分析增加了ref\_dict参数用来指定每个变量的reference plot.forest移除df参数 analysis.cox返回的cox\_result中新增cox\_input属性，对应forest中的被移除的df参数
 * Changes
 * Changes
